Fix spelling of 'Kaoruka' to 'Kaoruko'

--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
             wallpapers: [
                 {
                     id: '1',
-                    title: 'Kaoruka',
-                    description: 'Beautiful Kaoruka wallpaper',
+                    title: 'Kaoruko',
+                    description: 'Beautiful Kaoruko wallpaper',
                     thumbnailUrl: 'https://i.ibb.co/93v4Y9ZS/Neon-gradient-mobile-mockup-instagram-post-5.png',
                     downloadUrl: 'https://www.mediafire.com/view/iprqxoxq3kqaeka/Kaoruko_Powered_by_%2540kawaii_dreams.jpg/file',
                     requiredAds: CONFIG.WALLPAPERS_ADS_REQUIRED,
@@ -338,8 +338,8 @@
             themes: [
                 {
                     id: '3',
-                    title: 'Kaoruka',
-                    description: 'Beautiful Kaoruka theme',
+                    title: 'Kaoruko',
+                    description: 'Beautiful Kaoruko theme',
                     thumbnailUrl: 'https://i.ibb.co/1tK2nSPW/IMG-20251017-232540-666.jpg',
                     downloadUrl: 'https://t.me/addtheme/Kaaoruuko',
                     requiredAds: CONFIG.THEMES_ADS_REQUIRED,
