Add Mizuhara wallpaper entry to content data
Added a new wallpaper entry for Mizuhara with details.

--- a/index.html
+++ b/index.html
@@ -314,6 +314,18 @@
         // Your content data
         let contentData = {
             wallpapers: [
+               
+                {
+                    id: '5',
+                    title: 'Mizuhara',
+                    description: 'Mizuhara looks beautiful in a kimono',
+                    thumbnailUrl: 'https://i.ibb.co/kWXtGMs/Neon-gradient-mobile-mockup-instagram-post.png',
+                    downloadUrl: 'https://mega.nz/file/0FsVQAwR#0CmEg8WhJxnE6Z1xuYDwsCXYNfDWyB42WYMYEZUfcRc',
+                    requiredAds: CONFIG.WALLPAPERS_ADS_REQUIRED,
+                    type: 'wallpaper',
+                    createdAt: new Date().toISOString()
+                },
+                
                 {
                     id: '1',
                     title: 'Kaoruko',
