Add new theme 'Mizuhara' to index.html
Added a new theme 'Mizuhara' with details and URLs.

--- a/index.html
+++ b/index.html
@@ -349,6 +349,17 @@
             ],
             themes: [
                 {
+                    id: '6',
+                    title: 'Mizuhara',
+                    description: 'Mizuhara looks beautiful in a kimono Theme',
+                    thumbnailUrl: 'https://i.ibb.co/mV8f2pQ5/IMG-20251030-153407-629.jpg',
+                    downloadUrl: 'https://t.me/addtheme/Mizuharaa',
+                    requiredAds: CONFIG.THEMES_ADS_REQUIRED,
+                    type: 'theme',
+                    createdAt: new Date().toISOString()
+                },
+                
+                {
                     id: '3',
                     title: 'Kaoruko',
                     description: 'Beautiful Kaoruko theme',
