Add new slider image to loadSliders function

--- a/index.html
+++ b/index.html
@@ -628,6 +628,11 @@
 
         function loadSliders() {
             const slides = [
+
+                {
+                    imageUrl: 'https://i.ibb.co/QFWFjtx5/In-Shot-20251030-155040489.jpg',
+                    linkUrl: ''
+                },
                 {
                     imageUrl: 'https://i.ibb.co/h1RfFFFM/IMG-20251030-113334-573.jpg',
                     linkUrl: ''
